--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -133,3 +133,11 @@ th,td{text-align: center;}
 .height-100 {
     height: 100%;
 }
+
+.height-50 {
+    height: 50%;
+}
+
+.width-100 {
+    width: 100%;
+}
